// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/client/proto";

// ListOktaGroupsRequest is a request for listing Okta groups.
message ListOktaGroupsRequest {}

// ListOktaGroupsResponse is the response to listing Okta groups.
message ListOktaGroupsResponse {
  // The list of groups.
  repeated types.OktaGroupV1 groups = 1;
}

// ListOktaApplicationRequest is a request for listing Okta applications.
message ListOktaApplicationsRequest {}

// ListOktaGroupsResponse is the response to listing Okta applications.
message ListOktaApplicationsResponse {
  // The list of applications.
  repeated types.OktaApplicationV1 applications = 1;
}

// OktaIntegrationService allows users to query the Okta integration service.
service OktaIntegrationService {
  // ListOktaGroups will return a list of groups from the Okta integration service.
  rpc ListOktaGroups(ListOktaGroupsRequest) returns (ListOktaGroupsResponse);

  // ListApplications will return a list of applications from the Okta integration service.
  rpc ListOktaApplications(ListOktaApplicationsRequest) returns (ListOktaApplicationsResponse);
}
